# elang

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy_runner.py  runner.sh
elang_examples/: array_test.li  fib.li  fib.li.out  fizz_buzz.li  helloworld.li.out  io.c  logical_test.li  mandelbrot.li  mandelbrot_ppm.li  mandelbrot_ppm.li.ll  mandelbrot_ppm.li.opt.ll  ptr_test.li  string_test.li  test2.li  test_errors.li  test_shadow.li
examples/: test1.li
sample_programs/: array_test.li  char_lit.li  forward_decl.li  helloworld.li  io.li  logical_test.li  mandelbrot_ppm.li  string_test.li  struct_test.li  test_errors.li  test_shadow.li  unop_test.li  while_test.li
src/: ast.rs  ast_printer.rs  comment_remover.rs  diagnostics.rs  driver.rs  lexer.rs  lib.rs  main.rs  outer.rs  parser.lalrpop  parser.rs  pipeline.rs  semantic_error.rs  source_manager.rs  span.rs  syntax_error.rs
src/ast/: mod.rs  printer.rs
src/codegen/: c_gen.rs  llvm_gen.rs  mod.rs
src/ir/: builder.rs  mod.rs  opt.rs  printer.rs  symbol_table.rs  ty.rs  tyck.rs  type_manager.rs
src/ir/builder/: function_builder.rs  mod.rs  semantic_error.rs  typecheck_defs.rs
src/lexer/: mod.rs  token.rs
tests/: output.rs
tests/output/: func.li  parentheses.li  precedence.li  primes.li
